# realtime-motion-tracking-MPU6050

./: 111.md  CMakeLists.txt  ProPrj_ch32_2026-06-02.epro2
STM32SLN/: .mxproject  CMakeLists.txt  STM32F030XX_FLASH.ld  STM32SLN.ioc  accmod.elf
STM32SLN/Core/Inc/: stm32f0xx_it.h
STM32SLN/Core/Src/: MPU6050.c  MPU6050.h  main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
STM32SLN/cmake/: gcc-arm-none-eabi.cmake
STM32SLN/cmake/stm32cubemx/: CMakeLists.txt
ch572-ble/: CMakeLists.txt  peripheral_main.c
ch572-ble/HAL/include/: CONFIG.h
ch572-ble/LIB/: CH572BLEPeri_LIB.h
ch572-ble/StdPeriphDriver/: CH57x_pwm.c  CH57x_pwr.c  CH57x_sys.c
ch572-ble/StdPeriphDriver/inc/: CH572SFR.h  CH57x_pwm.h  CH57x_sys.h  ISP572.h
ch592-ble/: CMakeLists.txt  dataTask.c  dataTask.h  peripheral.c  peripheral.h  peripheral_main.c  symbols.txt
ch592-ble/HAL/: MCU.c
ch592-ble/Profile/include/: gattprofile.h
ch592-ble/StdPeriphDriver/: CH59x_sys.c
